fix badge wrapping with icon

--- a/packages/@adobe/spectrum-css-temp/components/badge/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/badge/index.css
@@ -33,13 +33,14 @@ governing permissions and limitations under the License.
 
   /* label should always have padding at the end */
   .spectrum-Badge-label {
-    padding-inline-end: var(--spectrum-global-dimension-size-115);
     order: 1; /* always be after the icon, regardless of DOM order */
+    padding-inline-end: var(--spectrum-global-dimension-size-115);
   }
 
   .spectrum-Badge-icon {
-    padding-inline-start: var(--spectrum-global-dimension-size-115);
+    flex-shrink: 0;
     order: 0; /* always be before the label, regardless of DOM order */
+    padding-inline-start: var(--spectrum-global-dimension-size-115);
   }
   /* icon + text buttons should have padding between the text and icon no matter the order */
   .spectrum-Badge-icon + .spectrum-Badge-label {
